--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "preview": "vite preview",
     "setup": "npm run anchor-build && npm run codama:js"
   },
-  "description": "React + Vite, Tailwind, @solana/react-hooks, Anchor vault program",
+  "description": "React + Vite, Tailwind, @solana/react-hooks, Anchor identity score program",
   "keywords": [
     "anchor",
     "kit",
@@ -38,17 +38,23 @@
   "devDependencies": {
     "@codama/nodes-from-anchor": "^1.3.8",
     "@codama/renderers-js": "^1.5.5",
+    "@coral-xyz/anchor": "^0.32.1",
     "@eslint/js": "^9.35.0",
+    "@types/chai": "^5.2.3",
+    "@types/mocha": "^10.0.10",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@vitejs/plugin-react": "^5.0.3",
+    "chai": "^6.2.2",
     "codama": "^1.5.0",
     "eslint": "^9",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.4.0",
+    "mocha": "^11.7.5",
     "prettier": "^3.6.2",
+    "ts-mocha": "^11.1.0",
     "typescript": "^5",
     "typescript-eslint": "^8.44.0",
     "vite": "^7.1.6"
